objects/smagicinteract__SMS_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Campaign_Statuses__c</fullName>
        <label>Campaign Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Condition__c</fullName>
        <label>Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smagicinteract__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Exclude_Phone_Json__c</fullName>
        <label>Exclude Phone Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Failure_Reason__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Job_ID__c</fullName>
        <label>Job ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__List_View_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>List View Configuration</label>
        <referenceTo>smagicinteract__List_View_Configuration__c</referenceTo>
        <relationshipLabel>SMS Scheduled</relationshipLabel>
        <relationshipName>SMS_Scheduled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Name_Field__c</fullName>
        <label>Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Optout_Field__c</fullName>
        <label>Optout Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Phone_Field__c</fullName>
        <label>Phone Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Record_Ids__c</fullName>
        <label>Record Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SMS Template</label>
        <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
        <relationshipLabel>SMS Scheduled</relationshipLabel>
        <relationshipName>SMS_Scheduled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Text__c</fullName>
        <label>SMS Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Schedule_JobId__c</fullName>
        <label>Schedule JobId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Schedule_Name__c</fullName>
        <label>Schedule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Selected_Days_RecurWeek__c</fullName>
        <label>Selected Days RecurWeek</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Selected_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMS_Scheduled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SenderId__c</fullName>
        <label>Sender Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Show_Other_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Template_Id_Json__c</fullName>
        <label>Template Id Json</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Unrelated_Object_ID__c</fullName>
        <label>Unrelated Object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Variable_Day_RecurDay__c</fullName>
        <label>Variable Day RecurDay</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__isOptout__c</fullName>
        <label>Send To Optout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__isRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRecurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__recursTypeForDaily__c</fullName>
        <label>recursTypeForDaily</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__recursTypeMonthly__c</fullName>
        <label>recursTypeMonthly</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__recursTypeYearly__c</fullName>
        <label>recursTypeYearly</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__recursType__c</fullName>
        <label>recursType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__selectedDateForYear__c</fullName>
        <label>selectedDateForYear</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__selectedDayForMonth1__c</fullName>
        <label>selectedDayForMonth1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__selectedDayForMonth2__c</fullName>
        <label>selectedDayForMonth2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__selectedMonthForYear__c</fullName>
        <label>selectedMonthForYear</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__selectedMonth__c</fullName>
        <label>selectedMonth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__selectedWeekDayForYear__c</fullName>
        <label>selectedWeekDayForYear</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__selectedWeekForMonth__c</fullName>
        <label>selectedWeekForMonth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__selectedWeekForYear__c</fullName>
        <label>selectedWeekForYear</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__variableMonth1__c</fullName>
        <label>variableMonth1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__variableMonth2__c</fullName>
        <label>variableMonth2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SMS Schedule</label>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Schedule_Name__c</columns>
        <columns>smagicinteract__Job_ID__c</columns>
        <columns>smagicinteract__Object__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>smagicinteract__Record_Ids__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__Status__c</columns>
        <columns>smagicinteract__SenderId__c</columns>
        <columns>smagicinteract__isOptout__c</columns>
        <columns>smagicinteract__Failure_Reason__c</columns>
        <columns>smagicinteract__Name_Field__c</columns>
        <columns>smagicinteract__Optout_Field__c</columns>
        <columns>smagicinteract__Phone_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SMS Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Scheduled</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>